--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,10 @@
       <artifactId>fehead-common</artifactId>
       <version>${fehead-common-version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
     <!--mysql连接池-->
     <dependency>
       <groupId>com.alibaba</groupId>
