--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,15 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-    <!--mysql连接池-->
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter-websocket</artifactId>-->
+<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-websocket</artifactId>
+    </dependency>
+  <!--mysql连接池-->
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>druid</artifactId>
@@ -50,11 +58,7 @@
 <!--      <groupId>mysql</groupId>-->
 <!--      <artifactId>mysql-connector-java</artifactId>-->
 <!--    </dependency>-->
-    <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>fastjson</artifactId>
-      <version>1.2.49</version>
-    </dependency>
+
   </dependencies>
 
   <build>
