--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,11 @@
       <version>3.1.0</version>
     </dependency>
     <!--mysql连接驱动-->
-<!--    <dependency>-->
-<!--      <groupId>mysql</groupId>-->
-<!--      <artifactId>mysql-connector-java</artifactId>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.47</version>
+    </dependency>
 
   </dependencies>
 
